tests/snapshot/error/source_locations/destructure/object/get_named_property.exp
Error: 
  ┌ source_locations/destructure/object/get_named_property.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at get foo (source_locations/destructure/object/get_named_property.js:3:11)
  at <global> (source_locations/destructure/object/get_named_property.js:7:7)